--- a/app/src/main/res/layout/layout_dialog_utils.xml
+++ b/app/src/main/res/layout/layout_dialog_utils.xml
@@ -23,7 +23,7 @@
         android:layout_marginEnd="5dp"
         android:layout_width="45dp"
         android:layout_height="45dp"
-        android:indeterminateTint="@color/Red"/>
+        android:indeterminateTint="@color/colorRed"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
